Toquetear la ventana emergente 2

--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig" ></audio>
+        <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig"></audio>
 
         <div>
             <button style="margin: 0 5px; margin-bottom: 6px;" *ngFor="let song of randomSongs" class="btn btn-dark"
@@ -32,6 +32,29 @@
         <div class="animate__animated animate__fadeInRightBig">
             <button type="button" class="btn btn-dark" (click)="showHint()"
                 [disabled]="hintButtonDisabled">Hint</button>
+        </div>
+    </div>
+
+
+    <div *ngIf="detergenteWindow" class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Game over</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>hola</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" (click)="getThePlaylistForGuess()">Volver a
+                        jugar</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
