--- a/src/app/component/make-a-playlist/make-a-playlist.component.html
+++ b/src/app/component/make-a-playlist/make-a-playlist.component.html
@@ -8,13 +8,27 @@
     <div class="animate__animated animate__heartBeat">
         <div class="card text-center mb-3" style="width: 18rem;" *ngIf="showPlaylistCard">
             <div class="card-body">
-                <h5 class="card-title"><strong>Tu playlist personalizada</strong></h5>
+                <h5 class="card-title"><strong>Playlist personalizada</strong></h5>
                 <p class="card-text">Responde algunas preguntas para obtener una playlist según tus gustos.</p>
                 <a class="btn btn-dark" (click)="toggleVisibility('form')">Comenzar</a>
             </div>
         </div>
     </div>
-    
+
+    <div class="animate__animated animate__heartBeat">
+        <div class="card text-center mb-3" style="width: 18rem;" *ngIf="showMasEscuchadosCard">
+            <div class="card-body">
+                <h5 class="card-title"><strong>Playlist segun tus gustos</strong></h5>
+                <p class="card-text">Dejanos analizar que te gusta para obtener una nueva playlist que escuhcar.</p>
+                <a class="btn btn-dark" (click)="toggleVisibility('playlist')">Comenzar</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" *ngIf="showRecommendedPlaylist">
+        <p>hola</p>
+    </div>
+
     <div class="container" *ngIf="showFormSection">
         <form [formGroup]="quizForm">
             <div class="animate__animated animate__bounce" *ngIf="currentQuestion === 1">
