--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -4,6 +4,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -11,8 +12,20 @@ body {
 }
 
 h1 {
+    margin-top: -170px;
     font-size: 40px; 
     color: rgba(0, 0, 0, 0.87); 
+}
+.image-container {
+    display: flex;
+    align-items: center;
+    color: rgb(255, 255, 255); 
+
+}
+
+.image-text {
+    margin-top: -290px;
+    margin-left: 7px; /* Ajusta el valor según sea necesario para la separación entre la imagen y el texto */
 }
 
 .buttons
@@ -34,7 +47,6 @@ h1 {
     margin-top: 5px;
 }
 
-
 .album-container {
     display: flex;
     align-items: center;
@@ -47,10 +59,38 @@ h1 {
 
 #audioPlayer {
     margin-top: 10px;
-    
+    margin-right: -20px;
+
 }
 
 .button{
     margin-bottom: 6px;
     margin: 0 5px;
+}
+
+.table-container {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.table {
+    border-radius: 10px;
+}
+
+.user-photo {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+
+
+.animate__animated.animate__zoomIn{
+    --animate-duration: 1s;
+
+}
+.animate__animated.animate__fadeInUpBig{
+    --animate-duration: 0.3s;
+
 }
