--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -5,62 +5,142 @@
 </head>
 
 <body>
-    <div class="container">
+
+    <div>
         <h1 class="animate__animated animate__zoomIn">🎵 Guess the Song 🎵</h1>
+    </div>
+    <div class="image-container">
+        <img class="animate__animated animate__fadeInLeft" src="assets/reglas.png" alt="Imagen" type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal"
+            style="width: 60px; height: 60px; margin-top: -280px; margin-left: -650px;">
+        <div class="image-text">
+            <p class="animate__animated animate__fadeInLeft"><strong>INSTRUCCIONES</strong></p>
+        </div>
+    </div>
+
+    <div class="row" class="animate__animated animate__fadeInRightBig">
+        <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: -210px; margin-left: 1000px;">
+            <h2>🏆Leaderboard🏆</h2>
+            <div class="table-container rounded">
+                <table class="table table-dark table-striped rounded">
+                    <tbody>
+                        <tr *ngFor="let user of leaderboardData; let i = index">
+                            <td class="align-middle"><img [src]="user.url_photo" alt="User Photo" class="user-photo rounded-circle"></td>
+                            <td class="align-middle" style="font-size: 18px;">{{ user.displayName }}</td>
+                            <!-- Asegúrate de reemplazar 'name' con la propiedad real del usuario -->
+                            <td class="align-middle" style="font-size: 18px;">{{ user.points }}</td>
+                            <!-- Asegúrate de reemplazar 'score' con la propiedad real de puntuación -->
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
 
         <div class="animate__animated animate__fadeInRightBig">
             <div class="d-grid gap-2 col-6 mx-auto">
                 <button class="btn btn-dark" type="button" (click)="getThePlaylistForGuess()">Empezar a jugar</button>
             </div>
-        </div>
-
-        <div class="hints">
-            <p *ngIf="hintMessage"><strong>{{hintMessage}}</strong></p>
-            <div class="album-container" *ngIf="albumImageUrl">
-                <img class="albumCover" [src]="albumImageUrl" width="200" height="200">
+            <div *ngIf="alert" class="animate__animated animate__fadeInUpBig">
+                <div id="loseModal" class="alert alert-success" role="alert"
+                    style="width: 500px; height: 170px; margin-top: 40px; margin-left: 315px;">
+                    <h4 class="alert-heading">GAME OVER</h4>
+                    <p>La canción era:"{{winningTrack.track.name}}"</p>
+                    <p>Tus puntos fueron: {{this.points}}</p>
+                    <p class="mb-0">Sigue intentando no te rindas!</p>
+                </div>
             </div>
         </div>
 
-        <div>
-            <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig"></audio>
+        <div *ngIf="win">
+            <div class="hints" class="animate__animated animate__fadeIn">
+                <p *ngIf="hintMessage" class="animate__animated animate__fadeIn"><strong>{{hintMessage}}</strong></p>
+                <div class="album-container" class="animate__animated animate__fadeIn" *ngIf="albumImageUrl">
+                    <img class="albumCover" [src]="albumImageUrl" width="200" height="200">
+                </div>
+            </div>
 
-            <img class="animate__animated animate__fadeInRightBig"
-                src="https://cdn-icons-png.flaticon.com/512/3811/3811713.png" alt="Imagen" type="button"
-                data-bs-toggle="modal" data-bs-target="#exampleModal" style="width: 40px; height: 40px; margin-top: -45px; margin-left: 10px;">
+
+            <div>
+                <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig"></audio>
+
+            </div>
+
+            <div class="animate__animated animate__zoomIn">
+                <button style="margin: 0 5px; margin-bottom: 6px;" *ngFor="let song of randomSongs" class="btn btn-dark"
+                    type="button" (click)="handleOptionClick(song)" [disabled]="songsButtonDisabled">{{
+                    song.track.name }}</button>
+            </div>
+
+            <div class="animate__animated animate__fadeInRightBig">
+                <button type="button" class="btn btn-dark" (click)="showHint()"
+                    [disabled]="hintButtonDisabled">Hint</button>
+            </div>
         </div>
 
-        <div>
-            <button style="margin: 0 5px; margin-bottom: 6px;" *ngFor="let song of randomSongs" class="btn btn-dark"
-                type="button" (click)="handleOptionClick(song)" [disabled]="songsButtonDisabled">{{
-                song.track.name }}</button>
-        </div>
+        <audio id="winSound" src="assets/correct.mp3" preload="auto"></audio>
+        <audio id="loseSound" src="assets/wrong.mp3" preload="auto"></audio>
 
-        <div class="animate__animated animate__fadeInRightBig">
-            <button type="button" class="btn btn-dark" (click)="showHint()"
-                [disabled]="hintButtonDisabled">Hint</button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p>
+                            <strong>Inicio del Juego:</strong>
+                            Verás un botón que dice "Empezar a jugar". Haz clic en este botón para comenzar el juego.
+                        </p>
+                        <p>
+                            <strong>Adivina la Canción:</strong>
+                            Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones de
+                            canciones.
+                            Escucha las pistas de audio y elige la canción que creas que es la correcta.
+                        </p>
+                        <p>
+                            <strong>Pistas:</strong>
+                            Si necesitas ayuda, puedes hacer clic en el botón "Hint" (Pista). Te proporcionará
+                            información
+                            adicional para ayudarte a adivinar la canción. Ten en cuenta que cada pista revelada puede
+                            restar puntos, así que úsalas con precaución.
+                            Modal de Reglas:
+                        </p>
+                        <p>
+                            <strong>Puntuación:</strong>
+                            Tu puntuación se acumula en función de cuántas pistas de ayuda utilizas y de si adivinas
+                            correctamente la canción. Intenta acumular la mayor cantidad de puntos posible.
+                        </p>
+                        <p>
+                            <strong>Nuevo Juego:</strong>
+                            Si deseas jugar de nuevo, puedes presionar el botón "Empezar a jugar" nuevamente para
+                            reiniciar el juego con una nueva selección de canciones.
+                            Espero que este instructivo te ayude a comprender cómo jugar "Guess the Song". ¡Disfruta del
+                            juego y diviértete adivinando las canciones!
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel"><strong>INSTRUCCIONES</strong></h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
+    <!--<div class="collapse" id="collapseExample" tabindex="-1" aria-hidden="true" style="width: 200px; height: 100px; margin-top: 0px; margin-left: 0px;">
+            <div class="modal-dialog">
+                <div class="card card-body">
                     <p>
                         <strong>Inicio del Juego:</strong>
                         Verás un botón que dice "Empezar a jugar". Haz clic en este botón para comenzar el juego.
                     </p>
                     <p>
                         <strong>Adivina la Canción:</strong>
-                        Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones de canciones.
+                        Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones de
+                        canciones.
                         Escucha las pistas de audio y elige la canción que creas que es la correcta.
                     </p>
                     <p>
                         <strong>Pistas:</strong>
-                        Si necesitas ayuda, puedes hacer clic en el botón "Hint" (Pista). Te proporcionará información
+                        Si necesitas ayuda, puedes hacer clic en el botón "Hint" (Pista). Te proporcionará
+                        información
                         adicional para ayudarte a adivinar la canción. Ten en cuenta que cada pista revelada puede
                         restar puntos, así que úsalas con precaución.
                         Modal de Reglas:
@@ -79,8 +159,5 @@
                     </p>
                 </div>
             </div>
-        </div>
-    </div>
-
-
+        </div>-->
 </body>
