--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -14,7 +14,7 @@ body {
 h1 {
     margin-top: -170px;
     font-size: 40px; 
-    color: rgba(0, 0, 0, 0.87); 
+    color: rgba(0, 0, 0, 0.87);  
 }
 .image-container {
     display: flex;
@@ -25,8 +25,10 @@ h1 {
 
 .image-text {
     margin-top: -290px;
-    margin-left: 7px; /* Ajusta el valor según sea necesario para la separación entre la imagen y el texto */
-}
+    margin-left: 7px;
+} 
+
+
 
 .buttons
 {
