--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -6,19 +6,50 @@
 
 <body>
 
-    <div>
+    <header>
         <h1 class="animate__animated animate__zoomIn">🎵 Guess the Song 🎵</h1>
-    </div>
+    </header>
+
     <div class="image-container">
         <img class="animate__animated animate__fadeInLeft" src="assets/reglas.png" alt="Imagen" type="button"
             data-bs-toggle="modal" data-bs-target="#exampleModal"
-            style="width: 60px; height: 60px; margin-top: -280px; margin-left: -650px;">
+            style="width: 60px; height: 60px; margin-top: -265px; margin-left: -650px;">
         <div class="image-text">
-            <p class="animate__animated animate__fadeInLeft"><strong>INSTRUCCIONES</strong></p>
+            <p class="animate__animated animate__fadeInLeft" style="margin-top: 70px;"><strong>INSTRUCCIONES</strong>
+            </p>
         </div>
     </div>
 
-    <div class="row" class="animate__animated animate__fadeInRightBig">
+    <div class="row" class="animate__animated animate__fadeInRight">
+        <img class="animate__animated animate__fadeInLeft" src="assets/Leaderboard.png" alt="Imagen" type="button"
+            data-bs-toggle="collapse" data-bs-target="#leaderboardCollapse" aria-expanded="false"
+            aria-controls="leaderboardCollapse"
+            style="width: 60px; height: 60px; margin-top: -300px; margin-left: 1010px; cursor: pointer;">
+        <div class="image-text">
+            <p class="animate__animated animate__fadeInRigth"
+                style="margin-top: 135px; margin-left: 1080px;color: rgb(255, 255, 255);"><strong>LEADERBOARD</strong>
+            </p>
+        </div>
+
+        <div class="collapse" id="leaderboardCollapse">
+            <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: 100px; margin-left: 1000px;">
+                <div class="table-container rounded">
+                    <table class="table table-dark table-striped rounded">
+                        <tbody>
+                            <tr *ngFor="let user of leaderboardData; let i = index">
+                                <td class="align-middle"><img [src]="user.url_photo" alt="User Photo"
+                                        class="user-photo rounded-circle"></td>
+                                <td class="align-middle" style="font-size: 18px;">{{ user.displayName }}</td>
+                                <td class="align-middle" style="font-size: 18px;">{{ user.points }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="row" class="animate__animated animate__fadeInRightBig">
         <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: -210px; margin-left: 1000px;">
             <h2>🏆Leaderboard🏆</h2>
             <div class="table-container rounded">
@@ -27,20 +58,16 @@
                         <tr *ngFor="let user of leaderboardData; let i = index">
                             <td class="align-middle"><img [src]="user.url_photo" alt="User Photo" class="user-photo rounded-circle"></td>
                             <td class="align-middle" style="font-size: 18px;">{{ user.displayName }}</td>
-                            <!-- Asegúrate de reemplazar 'name' con la propiedad real del usuario -->
                             <td class="align-middle" style="font-size: 18px;">{{ user.points }}</td>
-                            <!-- Asegúrate de reemplazar 'score' con la propiedad real de puntuación -->
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-    </div>
-
-
+    </div> -->
     <div class="container">
 
-        <div class="animate__animated animate__fadeInRightBig">
+        <div class="animate__animated animate__fadeInUp">
             <div class="d-grid gap-2 col-6 mx-auto">
                 <button class="btn btn-dark" type="button" (click)="getThePlaylistForGuess()">Empezar a jugar</button>
             </div>
