--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -5,7 +5,10 @@
         id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false"
         style="width: 30px; height: 30px; border-radius: 50%;">
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <li><a class="dropdown-item" href="#">Login</a></li>
+        <li>
+          <a class="dropdown-item" href="#">Cerrar sesion</a>
+          <a class="dropdown-item" (click)="deleteUser()" >Darse de baja</a> 
+        </li>
       </ul>
     </div>
 
@@ -23,6 +26,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Stats</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/social']" routerLinkActive="active" href="#">Social</a>
         </li>
       </ul>
     </div>
