--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@ body{
   }
 
 .background-image {
-    background-image: url('https://wallpapercave.com/wp/wp5134857.png');
+    background-image: url("../assets/Background.png");
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -60,7 +60,7 @@ body{
     bottom: 0;
     width: 100%;
     height: 29%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);;
     color: white;
     padding: 20px 0;
     text-align: center;
@@ -82,7 +82,7 @@ body{
 
 button {
     padding: 10px 20px;
-    background-color: #18D860;
+    background-color: rgba(245, 138, 151, 0.67);
     color: white;
     border: none;
     border-radius: 5px;
@@ -92,5 +92,5 @@ button {
 }
 
 button:hover {
-    background-color: #18D860;
+    background-color: #C193DC;
 }
