--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -7,11 +7,11 @@
 <body>
 
     <header>
-        <h1 class="animate__animated animate__zoomIn">🎵 Guess the Song 🎵</h1>
+        <h1 class="animate__animated animate__zoomIn">🎵 GUESS THE SONG 🎵</h1>
     </header>
 
     <div class="image-container">
-        <img class="animate__animated animate__fadeInLeft" src="assets/reglas.png" alt="Imagen" type="button"
+        <img class="animate__animated animate__fadeInLeft" src="assets/Reglas.png" alt="Imagen" type="button"
             data-bs-toggle="modal" data-bs-target="#exampleModal"
             style="width: 60px; height: 60px; margin-top: -265px; margin-left: -650px;">
         <div class="image-text">
@@ -49,35 +49,24 @@
         </div>
     </div>
 
-    <!-- <div class="row" class="animate__animated animate__fadeInRightBig">
-        <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: -210px; margin-left: 1000px;">
-            <h2>🏆Leaderboard🏆</h2>
-            <div class="table-container rounded">
-                <table class="table table-dark table-striped rounded">
-                    <tbody>
-                        <tr *ngFor="let user of leaderboardData; let i = index">
-                            <td class="align-middle"><img [src]="user.url_photo" alt="User Photo" class="user-photo rounded-circle"></td>
-                            <td class="align-middle" style="font-size: 18px;">{{ user.displayName }}</td>
-                            <td class="align-middle" style="font-size: 18px;">{{ user.points }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div> -->
     <div class="container">
 
         <div class="animate__animated animate__fadeInUp">
+
             <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-dark" type="button" (click)="getThePlaylistForGuess()">Empezar a jugar</button>
+                <div (click)="getThePlaylistForGuess()" *ngIf="!gameStarted">
+                    <img src="assets/Jugar.png" type="button" alt="Imagen" style="width: 60px; height: 60px;">
+                    <p style="color: rgb(255, 255, 255);"><strong>EMPEZAR A JUGAR</strong></p>
+                </div>
             </div>
+
             <div *ngIf="alert" class="animate__animated animate__fadeInUpBig">
-                <div id="loseModal" class="alert alert-success" role="alert"
-                    style="width: 500px; height: 170px; margin-top: 40px; margin-left: 315px;">
+                <div id="loseModal" class="alert" role="alert"
+                    style="width: 500px; height: 170px; margin-top: 40px; margin-left: 315px; background-color: rgba(193, 147, 220, 0.8); ">
                     <h4 class="alert-heading">GAME OVER</h4>
-                    <p>La canción era:"{{winningTrack.track.name}}"</p>
-                    <p>Tus puntos fueron: {{this.points}}</p>
-                    <p class="mb-0">Sigue intentando no te rindas!</p>
+                    <p><strong>La canción era:"{{winningTrack.track.name}}"</strong></p>
+                    <p><strong>Tus puntos fueron: {{this.points}}</strong></p>
+                    <p class="mb-0"><strong>Segui intentando no te rindas!</strong></p>
                 </div>
             </div>
         </div>
@@ -90,21 +79,24 @@
                 </div>
             </div>
 
-
             <div>
                 <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig"></audio>
 
             </div>
 
             <div class="animate__animated animate__zoomIn">
-                <button style="margin: 0 5px; margin-bottom: 6px;" *ngFor="let song of randomSongs" class="btn btn-dark"
-                    type="button" (click)="handleOptionClick(song)" [disabled]="songsButtonDisabled">{{
-                    song.track.name }}</button>
+                <button
+                    style="margin: 0 5px; margin-bottom: 6px; background-color: rgba(193, 147, 220, 0.9); color: rgba(32, 32, 32, 1)"
+                    *ngFor="let song of randomSongs" class="btn btn-dark" type="button"
+                    (click)="handleOptionClick(song)" [disabled]="songsButtonDisabled"><strong>{{
+                        song.track.name }}</strong></button>
             </div>
 
             <div class="animate__animated animate__fadeInRightBig">
-                <button type="button" class="btn btn-dark" (click)="showHint()"
-                    [disabled]="hintButtonDisabled">Hint</button>
+                <div (click)="showHint()" [style.opacity]="hintButtonDisabled ? '0.5' : '1'">
+                    <img src="assets/Hints.png" type="button" alt="Imagen" style="width: 40px; height: 40px;">
+                    <p><strong>HINT</strong></p>
+                </div>
             </div>
         </div>
 
@@ -113,8 +105,10 @@
 
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.9);">
                     <div class="modal-body">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
                         <p>
                             <strong>Inicio del Juego:</strong>
                             Verás un botón que dice "Empezar a jugar". Haz clic en este botón para comenzar el juego.
@@ -123,15 +117,14 @@
                             <strong>Adivina la Canción:</strong>
                             Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones de
                             canciones.
-                            Escucha las pistas de audio y elige la canción que creas que es la correcta.
+                            Escucha la pista de audio y elige la canción que creas que es la correcta.
                         </p>
                         <p>
                             <strong>Pistas:</strong>
-                            Si necesitas ayuda, puedes hacer clic en el botón "Hint" (Pista). Te proporcionará
-                            información
-                            adicional para ayudarte a adivinar la canción. Ten en cuenta que cada pista revelada puede
+                            Si necesitas ayuda, puedes hacer click en el botón "Hint" (Pista). Te proporcionará
+                            información adicional para ayudarte a adivinar la canción. Ten en cuenta que cada pista
+                            revelada puede
                             restar puntos, así que úsalas con precaución.
-                            Modal de Reglas:
                         </p>
                         <p>
                             <strong>Puntuación:</strong>
@@ -142,49 +135,17 @@
                             <strong>Nuevo Juego:</strong>
                             Si deseas jugar de nuevo, puedes presionar el botón "Empezar a jugar" nuevamente para
                             reiniciar el juego con una nueva selección de canciones.
-                            Espero que este instructivo te ayude a comprender cómo jugar "Guess the Song". ¡Disfruta del
-                            juego y diviértete adivinando las canciones!
+                        </p>
+                        <p>
+                            <strong>
+                                Espero que este instructivo te ayude a comprender cómo jugar "Guess the Song". ¡Disfruta
+                                del
+                                juego y diviértete adivinando las canciones!
+                            </strong>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!--<div class="collapse" id="collapseExample" tabindex="-1" aria-hidden="true" style="width: 200px; height: 100px; margin-top: 0px; margin-left: 0px;">
-            <div class="modal-dialog">
-                <div class="card card-body">
-                    <p>
-                        <strong>Inicio del Juego:</strong>
-                        Verás un botón que dice "Empezar a jugar". Haz clic en este botón para comenzar el juego.
-                    </p>
-                    <p>
-                        <strong>Adivina la Canción:</strong>
-                        Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones de
-                        canciones.
-                        Escucha las pistas de audio y elige la canción que creas que es la correcta.
-                    </p>
-                    <p>
-                        <strong>Pistas:</strong>
-                        Si necesitas ayuda, puedes hacer clic en el botón "Hint" (Pista). Te proporcionará
-                        información
-                        adicional para ayudarte a adivinar la canción. Ten en cuenta que cada pista revelada puede
-                        restar puntos, así que úsalas con precaución.
-                        Modal de Reglas:
-                    </p>
-                    <p>
-                        <strong>Puntuación:</strong>
-                        Tu puntuación se acumula en función de cuántas pistas de ayuda utilizas y de si adivinas
-                        correctamente la canción. Intenta acumular la mayor cantidad de puntos posible.
-                    </p>
-                    <p>
-                        <strong>Nuevo Juego:</strong>
-                        Si deseas jugar de nuevo, puedes presionar el botón "Empezar a jugar" nuevamente para
-                        reiniciar el juego con una nueva selección de canciones.
-                        Espero que este instructivo te ayude a comprender cómo jugar "Guess the Song". ¡Disfruta del
-                        juego y diviértete adivinando las canciones!
-                    </p>
-                </div>
-            </div>
-        </div>-->
 </body>
