--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -1,6 +1,6 @@
 body {
-    background-image: url('https://wallpapercave.com/wp/wp5134857.png');
-    background-size: cover;
+  background-image: url('../../../assets/Background.png');
+  background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
@@ -14,24 +14,24 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px; /* Ajusta el margen superior según sea necesario */
+    margin-top: 80px; 
   }
   
   .profilePhoto {
     margin-bottom: 10px;
-    width: 150px; /* Ajusta el tamaño según sea necesario */
-    height: 150px; /* Ajusta el tamaño según sea necesario */
-    border-radius: 50%; /* Hace que la imagen sea redonda */
-    overflow: hidden; /* Oculta cualquier contenido que se salga del área del círculo */
+    width: 150px; 
+    height: 150px; 
+    border-radius: 50%; 
+    overflow: hidden; 
   }
   
   .profilePhoto img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ajusta la imagen para cubrir completamente el contenedor redondeado */
+    object-fit: cover; 
   }
   
   .profileText {
     text-align: center;
-    margin-top: 10px; /* Ajusta el margen superior según sea necesario */
+    margin-top: 10px; 
   }
