--- a/src/app/component/make-a-playlist/make-a-playlist.component.html
+++ b/src/app/component/make-a-playlist/make-a-playlist.component.html
@@ -6,24 +6,34 @@
 
 <body>
     <div class="row">
-        <div class="col-sm-6 " >
+        <div class="col-sm-6" *ngIf="showIcon1">
             <div class="animate__animated animate__backInDown">
-                <div class="card text-center mb-3" style="width: 18rem;"  *ngIf="showPlaylistCard">
+
+                <img src="assets/Preguntas.png" alt="Imagen"
+                    style="width: 100px; height: 100px; display: block; margin: 0 auto;">
+
+                <div class="card text-center mb-3" style="width: 18rem;" *ngIf="showPlaylistCard">
                     <div class="card-body">
-                        <h5 class="card-title"><strong>Playlist personalizada</strong></h5>
+                        <h5 class="card-title"><strong>SEGUN COMO SOS</strong></h5>
                         <p class="card-text">Responde algunas preguntas para obtener una playlist según tus gustos.</p>
-                        <a class="btn btn-dark" (click)="toggleVisibility('form')">Comenzar</a>
+                        <a style="background-color: rgba(209, 241, 158, 0.8); color: black;" class="btn btn-dark"
+                            (click)="toggleVisibility('form')"><strong>EMPEZAR</strong></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 ">
+
+        <div class="col-sm-6" *ngIf="showIcon2">
             <div class="animate__animated animate__backInUp">
-                <div class="card text-center mb-3" style="width: 18rem;" *ngIf="showMasEscuchadosCard">
+                <img src="assets/Gustos.png" alt="Imagen"
+                    style="width: 100px; height: 100px; display: block; margin: 0 auto;">
+
+                <div class="card text-center mb-3 " style="width: 18rem;" *ngIf="showMasEscuchadosCard">
                     <div class="card-body">
-                        <h5 class="card-title"><strong>Playlist segun tus gustos</strong></h5>
+                        <h5 class="card-title"><strong>SEGUN QUE ESCUCHAS</strong></h5>
                         <p class="card-text">Analizamos que te gusta para obtener una nueva playlist que escuchar.</p>
-                        <a class="btn btn-dark" (click)="toggleVisibility('playlist')">Comenzar</a>
+                        <a style="background-color: rgba(209, 241, 158, 0.8); color: black;" class="btn btn-dark"
+                            (click)="toggleVisibility('playlist')"><strong>EMPEZAR</strong></a>
                     </div>
                 </div>
             </div>
@@ -48,27 +58,27 @@
             <div class="animate__animated animate__fadeIn" *ngIf="currentQuestion === 2">
                 <label for="question2"><strong>Que eligirias para ponerte?</strong></label>
                 <select class="form-select" formControlName="question2">
-                    <option value="1">Unas Converse.</option>
-                    <option value="2">Unas panchas, son muy cómodas.</option>
+                    <option value="1">Unas zapatillas.</option>
+                    <option value="2">Unas ojotas.</option>
                     <option value="3">Unos zapatos capaz.</option>
                 </select>
             </div>
 
             <div class="animate__animated animate__fadeIn" *ngIf="currentQuestion === 3">
-                <label for="question3"><strong>Para una noche con tus amig@s, ¿Qué planes preparas?</strong></label>
+                <label for="question3"><strong>Para una noche con tus amigos, ¿Qué harias?</strong></label>
                 <select class="form-select" formControlName="question3">
                     <option value="2">Unas pelis de terror y algo dulce.</option>
                     <option value="3">Algun juego de mesa.</option>
-                    <option value="1">Hablar tranquil@s y música.</option>
+                    <option value="1">Hablar tranquilos y algo de música.</option>
                 </select>
             </div>
 
             <div class="animate__animated animate__fadeIn" *ngIf="currentQuestion === 4">
-                <label for="question4"><strong>A tu amig@ se entera que le fueron infiel. ¿Qué le
+                <label for="question4"><strong>A tu amigo se entera que le fueron infiel. ¿Qué le
                         decis?</strong></label>
                 <select class="form-select" formControlName="question4">
                     <option value="1">Que le pregunte directamente.</option>
-                    <option value="2">Que l@ deje!! HNo vale la pena que se esté preocupando por alguien que no la
+                    <option value="2">Que la deje!! No vale la pena que se esté preocupando por alguien que no lo
                         merece.</option>
                     <option value="3">Que investigue primero, no hay que arriesgarse.</option>
                 </select>
@@ -77,7 +87,7 @@
             <div class="animate__animated animate__fadeIn" *ngIf="currentQuestion === 5">
                 <label for="question5"><strong>Que es lo primero que ves de alguien?</strong></label>
                 <select class="form-select" formControlName="question5">
-                    <option value="2">En el estilo que tiene. Me gustan medi@s rar@s.</option>
+                    <option value="2">En el estilo que tiene. Me gustan medios raros.</option>
                     <option value="1">En el físico. Si no me entra por los ojos no hay nada que hacer...</option>
                     <option value="3">En su personalidad!!</option>
                 </select>
@@ -96,7 +106,7 @@
                 <label for="question7"><strong>¿Cuál es tu red social
                         favorita?</strong></label>
                 <select class="form-select" formControlName="question7">
-                    <option value="1">Otra / No tengo.</option>
+                    <option value="1">Youtube.</option>
                     <option value="2">Instagram.</option>
                     <option value="3">Twitter.</option>
                 </select>
@@ -139,9 +149,9 @@
             class="btn btn-dark">Enviar</button>
 
         <div *ngIf="currentQuestion === totalQuestions">
-            <p class="animate__animated animate__shakeX" style="color: red;" *ngIf="quizForm.invalid"><strong>Por
-                    favor,
-                    responde todas las preguntas antes de enviar el cuestionario.</strong></p>
+            <p class="animate__animated animate__shakeX" style="color: red;" *ngIf="quizForm.invalid">
+                <strong>Por favor, responde todas las preguntas antes de enviar el cuestionario.</strong>
+            </p>
 
         </div>
     </div>
