--- a/src/app/component/social/social.component.css
+++ b/src/app/component/social/social.component.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://wallpapercave.com/wp/wp5134857.png');
+    background-image: url('../../../assets/Background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
