AP-49 estilo sonoro, falta ver como aplicar el algortimo en su totalidad

--- a/src/app/component/user-stats/user-stats.component.html
+++ b/src/app/component/user-stats/user-stats.component.html
@@ -9,7 +9,10 @@
     <button (click)="getTopSongs('long_term')">top songs large term</button>
     <button (click)="getTopSongs('medium_term')">top songs mediem term</button>
     <button (click)="getTopSongs('short_term')">top songs short term</button>
-  
+    <button (click)="promedio_popularity()">promedio</button>
+    <button (click)="getAudioFeatures()">audio Features</button>
+    <button (click)="getAudioStats()">audio stats</button>
+
 </div>
 
 <div *ngIf="topArtists">
